--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
+    "react-compare-slider": "^3.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
