--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 # Cloudflare Workers Configuration
-name = "mksaas-template"
+name = "watermarkremovertools-template"
 compatibility_date = "2024-07-24"
 
 # 账户 ID（需要替换为你的实际账户 ID）
@@ -16,13 +16,13 @@ NODE_ENV = "production"
 # D1 数据库（如果使用 Cloudflare D1）
 # [[d1_databases]]
 # binding = "DB"
-# database_name = "mksaas-db"
+# database_name = "watermarkremovertools-db"
 # database_id = "your-database-id"
 
 # R2 存储桶（用于文件存储）
 [[r2_buckets]]
 binding = "STORAGE"
-bucket_name = "mksaas-storage"
+bucket_name = "watermarkremovertools-storage"
 
 # KV 命名空间（用于缓存）
 [[kv_namespaces]]
