--- a/.gitignore
+++ b/.gitignore
@@ -162,6 +162,32 @@ private/
 *.secret
 
 # ===========================
+# Python
+# ===========================
+# Virtual environments
+venv/
+venv_demo/
+*.pyc
+__pycache__/
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# ===========================
 # Miscellaneous
 # ===========================
 # Backup files
